; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngcp.c_display_clean.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngcp.c_display_clean.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.display = type { i64, i32*, i64, i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.display*)* @display_clean to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @display_clean(%struct.display* %0) #0 {
  %2 = alloca %struct.display*, align 8
  store %struct.display* %0, %struct.display** %2, align 8
  %3 = load %struct.display*, %struct.display** %2, align 8
  %4 = call i32 @display_clean_read(%struct.display* %3)
  %5 = load %struct.display*, %struct.display** %2, align 8
  %6 = call i32 @display_clean_write(%struct.display* %5)
  %7 = load %struct.display*, %struct.display** %2, align 8
  %8 = getelementptr inbounds %struct.display, %struct.display* %7, i32 0, i32 4
  store i32* null, i32** %8, align 8
  %9 = load %struct.display*, %struct.display** %2, align 8
  %10 = getelementptr inbounds %struct.display, %struct.display* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret void
}

declare dso_local i32 @display_clean_read(%struct.display*) #1

declare dso_local i32 @display_clean_write(%struct.display*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
